# stale-task-detector

./: .gitignore  README.md  pyproject.toml
.claude/agents/: reviewer.md
stale_task_detector/: __init__.py  notifier.py  scanner.py  schema.py  thresholds.py
tests/: test_detector.py
