[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "stale-task-detector"
version = "1.0.0"
description = "Stale Task Detection and Auto-Expiry Module for the Post Fiat Task Node"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]
